# luaproc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/core/: app.cpp  app.hpp  color.hpp  constants.hpp  core.cpp  core.hpp  environment.cpp  environment.hpp  funchandler.hpp  lua.cpp  lua.hpp  luaproc.cpp  luaproc.hpp  math.hpp  msghandler.hpp  output.hpp  safesol.hpp  shape.hpp  transform.hpp  utils.hpp
src/modules/: color.cpp  color.hpp  environment.cpp  environment.hpp  lightscamera.cpp  lightscamera.hpp  math.cpp  math.hpp  output.cpp  output.hpp  shape.cpp  shape.hpp  transform.cpp  transform.hpp
